[package]
name = "rust-flatten-json"
version = "0.2.0"
edition = "2021"
authors = ["Drazen Urch <drazen@urch.eu>"]
description = "Tiny Rust library for flattening JSON and JSON type inference"
repository = "https://github.com/durch/rust-flatten-json"
documentation = "https://durch.github.io/rust-flatten-json/"
license = "MIT"
readme = "README.md"
keywords = ['json']

[lib]
name = "flatten_json"
path = "src/lib.rs"

[dependencies]
log = "0.4.16"
serde_json = "1.0.79"
thiserror = "1.0.30"

[dev-dependencies]
anyhow = "1.0.56"

[[example]]
name = "from_stdin"
