[package]
name = "flatten-json-object"
version = "0.6.1"
edition = "2021"
authors = ["Vicent Selfa <vtselfa@gmail.com>"]
description = "Tiny Rust library for flattening JSON objects"
repository = "https://github.com/vtselfa/flatten-json-object"
license = "MIT"
readme = "README.md"
keywords = ["json", "flatten", "flattening", "object", "serde"]
categories = ["encoding"]

[dependencies]
serde_json = "1.0.79"
thiserror = "1.0.30"

[dev-dependencies]
anyhow = "1.0.56"
log = "0.4.16"
rstest = "0.15.0"

[[example]]
name = "from_stdin"
